@@ -1,5 +1,11 @@
 2012-05-07  Kinuko Yasuda  <kinuko@chromium.org>
 
+        Unreviewed build fix: didOpenFileSystem hides overloaded virtual function
+
+        * src/WorkerAsyncFileSystemChromium.cpp:
+
+2012-05-07  Kinuko Yasuda  <kinuko@chromium.org>
+
         Unreviewed build fix: adding missing include.
 
         * src/AsyncFileSystemChromium.cpp:
